--- a/src/App.css
+++ b/src/App.css
@@ -236,6 +236,51 @@ a{
 
 /* main containers */
 
+.image-slider{
+     width: 100%;
+     position: relative;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     border: 1px solid var(--back-color-gold2);
+     padding: 20px 10px;
+     border-radius: 20px;
+}
+
+.image-slider img{
+     /* width: 90%; */
+     max-height: 50vh;
+     border-radius: 10px;
+     max-width: 95%;
+}
+
+.image-slider .left-arrow, .image-slider .right-arrow{
+     width: 30px;
+     height: 30px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     border-radius: 50%;
+     border: 1px solid var(--text-color-para1);
+     color: var(--back-color-gold2);
+     position: absolute;
+     align-self: center;
+}
+
+.image-slider .left-arrow{
+     left: 15px;
+}
+
+.image-slider .right-arrow{
+     right: 15px;
+}
+.image-slider .left-arrow:hover, .image-slider .right-arrow:hover{
+     cursor: pointer;
+     background-color: var(--text-color-para1);
+}
+
 /* fixed components */
 .contact-bar{
      width: 100%;
@@ -1113,7 +1158,7 @@ a{
 }
 
 .product-square-container .content b span{
-     max-width:60%;
+     max-width:98%;
      text-overflow: ellipsis;
      white-space: nowrap;
      overflow: hidden;
@@ -1834,6 +1879,10 @@ a{
 
      .share-buttons button i{
           font-size: 25px;
+     }
+
+     .image-slider img{
+          max-height: 50vw;
      }
 }
 
