small changes on adert page

--- a/src/App.css
+++ b/src/App.css
@@ -1238,7 +1238,7 @@ a{
      flex-direction: row;
      flex-wrap: wrap;
      align-items: center;
-     justify-content: space-evenly;
+     justify-content: center;
      
 }
 
