--- a/src/App.css
+++ b/src/App.css
@@ -272,6 +272,143 @@ a{
      width: clamp(370px, 35%, 800px);
 }
 
+.vendor-page{
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+}
+
+.vendor-page-header{
+     width: 100%;
+     display:flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     position: relative;
+     height: 80px;
+     margin-bottom: 50px;
+     background-color: var(--text-color-para2);
+     background-position: center;
+     background-size: cover;
+     background-repeat: no-repeat;
+     backdrop-filter: blur(12px);
+}
+
+.vendor-page-header img{
+     position: absolute;
+     width: 80px;
+     border-radius: 50%;
+     bottom: -40px;
+     border: 1.5px solid var(--back-color-gold2);
+}
+
+.vendor-page-header h1{
+     font-size: 3rem;
+     font-weight: 900;
+     color: whitesmoke;
+     -webkit-text-stroke:1px var(--text-color-title);
+}
+
+.vendor-page-title{
+     width: 80%;
+     border-radius: 10px;
+     padding: 10px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+}
+.vendor-page-title h2{
+     font-size: 2rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+.vendor-page-title h3{
+     font-size: 1.6rem;
+     font-weight: 800;
+     color: var(--back-color-gold1);
+     width: 96%;
+     background-color: var(--text-color-title);
+     border-radius: 10px;
+     text-align: center;
+     margin: 10px auto;
+     padding: 10px 0;
+}
+
+.vendor-page-info{
+     width: 80%;
+     min-width: 380px;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+}
+
+.vendor-page-info .col{
+     width: 45%;
+     margin: 10px 5px;
+     min-width: 320px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     box-shadow: 1px 1px 2px var(--text-color-para2);
+     border-radius: 10px;
+     padding: 10px;
+}
+.vendor-page-info .col .row{
+     width: 90%;
+     min-width: 300px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     margin: 2.5px auto;
+}
+
+.vendor-page-info .col .row span{
+     width: auto;
+     font-size: 1.1rem;
+     font-weight: 600;
+     color: var(--text-color-para2);
+}
+
+.vendor-page-info .col .row p{
+     width: 70%;
+     font-size: 0.95rem;
+     font-weight: 800;
+     color: var(--text-color-title);
+}
+
+.vendor-page-info .col .row .contact{
+     width: 70%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+}
+
+.vendor-page-info .col .row a{
+     min-width: 100px;
+     background-color: var(--back-color-gold2);
+     color: var(--white-text);
+     border-radius: 10px;
+     padding: 2.5px 10px ;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-evenly;
+     font-size: 25px;
+     margin:5px  10px 5px 0;
+     transition: all 0.4s;
+}
+
+.vendor-page-info .col .row a:hover{
+     background-color: var(--text-color-title);
+     cursor: pointer;
+}
 /* main containers */
 
 .image-slider{
@@ -381,12 +518,20 @@ a{
 }
 
 .desktop-header h1{
-     font-size: 2.5rem;
+     font-size: 1.5rem;
      font-weight: 800;
      font-family: 'Poppins', sans-serif;
      line-height: 1.1;
+     color: var(--back-color-gold2) ;
+     text-align: center;
+     transition: all 0.5s;
 }
 
+.desktop-header h1:hover{
+     background-color: var(--back-color-gold2);
+     padding: 3px 10px;
+     border-radius: 5px;
+}
 .header-profile{
      width: clamp(150px, 30%, 1000px);
      display: flex;
@@ -1879,6 +2024,9 @@ a{
      .category-adverts{
           width: 90%;
      }
+     .vendor-page-header h1{
+          font-size: 2.5rem;
+     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -1899,7 +2047,7 @@ a{
           display: none;
      }
      .desktop-header h1{
-          font-size: 1.6rem;
+          font-size: 1.1rem;
      }
      .home .hello-section .col h1{
           font-size: 2.5rem;
@@ -1949,6 +2097,9 @@ a{
 
      .image-slider img{
           max-height: 50vw;
+     }
+     .vendor-page-header h1{
+          font-size: 2rem;
      }
 }
 
