--- a/src/App.css
+++ b/src/App.css
@@ -238,6 +238,22 @@ a{
      text-align: justify;
 }
 
+.search-page{
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+}
+
+.search-page h3{
+     width: 90%;
+     font-size: 1.6rem;
+     color: var(--text-color-title);
+     font-weight: 800;
+     margin: 10px auto;
+}
+
 .home .hello-section{
      width: 100%;
      background-color: var(--back-color-blue2);
