--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -624,6 +624,54 @@ a{
      background-color: var(--text-color-para1);
 }
 
+.home-boosted-ads{
+     width: 85%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: left;
+     position: relative;
+     flex-wrap: nowrap;
+     overflow-x: hidden;
+     padding: 0 5%;
+}
+
+.home-boosted-ads .ads-container{
+     width: 98%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: left;
+     position: relative;
+     flex-wrap: nowrap;
+     overflow-x: hidden;
+}
+
+.home-boosted-ads .nav-icon{
+     position: absolute;
+     background-color: var(--back-color-gold2-transparent);
+     color: var(--white-text);
+     width: 30px;
+     height: 30px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     font-size: 1.3rem;
+     border-radius: 50%;
+     cursor: pointer;
+     z-index: 20;
+     top: 150px;
+}
+
+.home-boosted-ads .left-nav-icon  {
+     left: 0;
+}
+
+.home-boosted-ads .right-nav-icon{
+     right: 0;
+}
+
 /* fixed components */
 .contact-bar{
      width: 100%;
@@ -1633,7 +1681,9 @@ a{
 }
 
 .product-square-container{
-     width: clamp(170px, 17%, 300px);
+     width: 17%;
+     min-width: 170px;
+     max-width: 300px;
      display: flex;
      flex-direction: column;
      align-items: center;
