--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -20,4 +20,8 @@
      .desktop-header{
           padding: 5px 2%;
      }
+     .home-boosted-ads{
+          width: 95%;
+          padding: 0;
+     }
 }
