updated the boosted ads container

--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -644,7 +644,7 @@ a{
      justify-content: left;
      position: relative;
      flex-wrap: nowrap;
-     overflow-x: hidden;
+     overflow-x: scroll;
 }
 
 .home-boosted-ads .nav-icon{
