--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -672,6 +672,63 @@ a{
      right: 0;
 }
 
+.home-best-sellers{
+     width: 80%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: flex-start;
+     overflow: hidden;
+     padding: 0;
+     background-color: var(--text-color-para1);
+     margin: 5px auto;
+     border-radius: 15px 20px 20px 15px;
+}
+
+.home-best-sellers .best-sellers-title{
+     background-color: var(--text-color-para1);
+     color: var(--white-text);
+     font-size: 0.9rem;
+     font-weight: 700;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     border-radius: 15px;
+     height: 100%;
+     padding: 5px 4px;
+     cursor: pointer;
+     width: 10%;
+     min-width: 100px;
+}
+
+.home-best-sellers .sellers-container{
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: flex-start;
+     width: 90%;
+     padding: 5px 5px;
+     overflow-x: scroll;
+     background-color: var(--white-text);
+     border-radius: 20px;
+     border: 1px solid var(--text-color-para1);
+}
+
+.best-seller-card{
+     width: auto;
+     padding: 5px 15px;
+     margin: 0 5px;
+     background-color: var(--text-color-para2);
+     color: var(--white-text);
+     font-size: 0.85rem;
+     font-weight: 600;
+     border-radius: 15px;
+     cursor: pointer;
+     white-space: nowrap;
+}
+
+
 /* fixed components */
 .contact-bar{
      width: 100%;
